package Exercise8.Zahleniterator;

public class IllegalArgumentException extends Exception{

    public IllegalArgumentException(){

        super("You have to choose between Even and Odd!!");
    }
}
