@startuml
interface DatenstructurIF{

   +erzeugeIterator(List<Integer> zahlen,String wahl):IteratorIF
}

interface IteratorIF {

       +next():int
       +hasnext():boolean
}

class ZahlenListe{

     +erzeugeIterator(List<Integer>zahlen,String wahl):IteratorIF

     +print(int value):void
}

class ZahlenIterator{

      int index;
      List<Integer> zahlen;
      String wahl;

      +ZahlenIterator(List<Integer>zahlen,String wahl)
      +next():int
      +hasnext():boolean


}

class IllegalArgumentException{

  +IllegalArgumentException()

}

DatenstructurIF<|--ZahlenListe
IteratorIF<|--ZahlenIterator

DatenstructurIF<-Testclient
Testclient->IteratorIF



@enduml